tests/baselines/reference/invalidForInBreakStatements.errors.txt
==== tests/cases/compiler/invalidForInBreakStatements.ts (6 errors) ====
    // All errors
    
    // naked break not allowed
    break;
    ~~~~~~
!!! error TS2202: 'break' statement can only be used within an enclosing iteration or switch statement.
    
    // non-existent label
    ONE:
    for (var x in {}) break TWO;
                      ~~~~~~~~~~
!!! error TS2203: Jump target not found.
    
    // break from inside function
    TWO:
    for (var x in {}) {
        var fn = () => {
            break TWO;
            ~~~~~~~~~~
!!! error TS2204: Jump target cannot cross function boundary.
        }
    }
    
    THREE:
    for (var x in {}) {
        var fn = function () {
            break THREE;
            ~~~~~~~~~~~~
!!! error TS2204: Jump target cannot cross function boundary.
        }
    }
    
    // break forward
    for (var x in {}) {
        break FIVE;
        ~~~~~~~~~~~
!!! error TS2203: Jump target not found.
        FIVE:
        for (var x in {}) { }
    }
    
    // label on non-loop statement
    NINE:
    var y = 12;
    
    for (var x in {}) {
        break NINE;
        ~~~~~~~~~~~
!!! error TS2203: Jump target not found.
    }